deployment/am/feeder-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: feeder-api
  namespace: am
  labels:
    app: feeder-api
spec:
  ports:
  - port: 8080
  selector:
    app: feeder-api
---
apiVersion: v1
kind: Service
metadata:
  name: feeder-api-minikube
  namespace: am
  labels:
    app: feeder-api
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 31000
  selector:
    app: feeder-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: feeder-api
  namespace: am
spec:
  replicas: 3
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: feeder-api
        serviceName: feeder-api
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: feeder-api
        image: index.docker.io/mateuszdyminski/am-feeder-api:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        resources:
            requests:
              memory: 100Mi
              cpu: 300m
