deployment/am/indexer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: indexer
  namespace: am
  labels:
    app: indexer
spec:
  ports:
  - port: 8080
  selector:
    app: indexer
---
apiVersion: v1
kind: Service
metadata:
  name: indexer-minikube
  namespace: am
  labels:
    app: indexer
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 31000
  selector:
    app: indexer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: indexer
  namespace: am
spec:
  replicas: 3
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: indexer
        serviceName: indexer
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: indexer
        image: index.docker.io/mateuszdyminski/am-indexer:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        resources:
            requests:
              memory: 100Mi
              cpu: 300m
